add layout top & bot

--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,17 @@
         </dependency>
         
         <dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-webmvc</artifactId>
-    <version>4.0.2.RELEASE</version>
-</dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-webmvc</artifactId>
+		    <version>4.0.2.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.9</version>
+		</dependency>
+		
   </dependencies>
   <build>
     <finalName>worldofrobots</finalName>
