--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,22 @@
 		<java.version>1.8</java.version>
 	</properties>
   <dependencies>
+     <dependency>
+      <groupId>commons-io</groupId>
+	  <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
     <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
             <scope>compile</scope>
         </dependency>
-        
+    	<dependency>
+		   <groupId>commons-fileupload</groupId>
+		   <artifactId>commons-fileupload</artifactId>
+		   <version>1.2.1</version> <!-- makesure correct version here -->
+		</dependency>
         <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
